; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_am.c_write_commit_msg.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_am.c_write_commit_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.am_state = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"final-commit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.am_state*)* @write_commit_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_commit_msg(%struct.am_state* %0) #0 {
  %2 = alloca %struct.am_state*, align 8
  %3 = alloca i8*, align 8
  store %struct.am_state* %0, %struct.am_state** %2, align 8
  %4 = load %struct.am_state*, %struct.am_state** %2, align 8
  %5 = call i8* @am_path(%struct.am_state* %4, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load %struct.am_state*, %struct.am_state** %2, align 8
  %8 = getelementptr inbounds %struct.am_state, %struct.am_state* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.am_state*, %struct.am_state** %2, align 8
  %11 = getelementptr inbounds %struct.am_state, %struct.am_state* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @write_file_buf(i8* %6, i32 %9, i32 %12)
  ret void
}

declare dso_local i8* @am_path(%struct.am_state*, i8*) #1

declare dso_local i32 @write_file_buf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
